# ctrnn-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  ctrnn.pyi  pyproject.toml
src/: lib.rs
