[package]
name = "ctrnn"
version = "0.1.0"
edition = "2021"

[lib]
name = "ctrnn"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
log = "0.4.22"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
numpy = "0.22.0"
pyo3 = { version = "0.22.0", features = ["extension-module", "serde"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
