[package]
name = "ctrnn"
version = "0.1.2"
edition = "2024"

[lib]
name = "ctrnn"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
log = "0.4.26"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
numpy = "0.23.0"
pyo3 = { version = "0.23.5", features = ["extension-module", "serde"] }
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
