[package]
name = "ctrnn"
version = "0.2.1"
edition = "2024"

[lib]
name = "ctrnn"
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.28"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
numpy = "0.26.0"
pyo3 = { version = "0.26.0", features = ["extension-module", "serde"] }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
