[project]
name = "ctrnn"
description = "Rust accelerated CTRNN implementation"
authors = [{ name = "Ben Barber", email = "benbarber121@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
